--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
-version: '3.9'
+version: "3.9"
 
 services:
   postgres:
     image: postgres
     ports:
-      - '5432:5432'
+      - "5433:5432"
     env_file:
       - .env
+
     volumes:
-      - 'postgres:/var/lib/postgresql/data'
+      - postgres:/var/lib/postgresql
 
 volumes:
   postgres:
