--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "node src/server.ts",
+    "migrate:create": "npx ts-node node_modules/db-migrate/bin/db-migrate create --ts",
+    "start": "node dist/server",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
     "test": "jasmine-ts",
     "tsc": "tsc"
@@ -12,19 +13,30 @@
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "@types/cors": "^2.8.19",
     "body-parser": "^1.19.0",
-    "typescript": "^4.1.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.9",
     "@types/jasmine": "^3.6.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^7.14.7",
-    "jasmine": "^3.6.4",
+    "@types/supertest": "^6.0.3",
+    "bcrypt": "^6.0.0",
+    "db-migrate": "^0.11.14",
+    "db-migrate-pg": "^1.5.2",
+    "dotenv": "^17.2.3",
+    "jasmine": "^3.99.0",
     "jasmine-spec-reporter": "^6.0.0",
-    "jasmine-ts": "^0.3.0",
-    "ts-node": "^9.1.1",
-    "tsc-watch": "^4.2.9"
+    "jasmine-ts": "^0.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "supertest": "^7.1.4",
+    "ts-node": "^10.9.1",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^4.9.5"
   }
 }
